Z-index fixes

--- a/src/components/DeLorean/_delorean.scss
+++ b/src/components/DeLorean/_delorean.scss
@@ -6,6 +6,7 @@
 	top: 0;
 	bottom: 0;
 	z-index: 2;
+	pointer-events: none;
 
 	@media (max-width: $bp-sm-max) {
 		display: none;
