--- a/src/components/Time/_time.scss
+++ b/src/components/Time/_time.scss
@@ -40,6 +40,7 @@
 			aspect-ratio: 128/29;
 			translate: 0 -50%;
 			z-index: 5;
+			pointer-events: none;
 
 			@media (min-width: $bp-md) {
 				background-size: contain;
